--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -26,6 +26,7 @@
 - [回文串](#回文串)
   - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
   - [125. 回文串验证](#125-回文串验证)
+  - [132. 分割回文串 II *](#132-分割回文串-ii-)
   - [516. 最长回文子序列](#516-最长回文子序列)
 - [字符串转换问题](#字符串转换问题)
   - [8.字符串转换整数 (atoi) Mid *](#8字符串转换整数-atoi-mid-)
@@ -973,7 +974,7 @@ public:
   - **特殊情况处理：** 考虑当回文子串长度为1时，需要进行返回
   - 时间复杂度O(N^2) 空间复杂度O(N)
 - **双指针比下面的递归还要高效**
-```
+```c++
 class Solution {
 public:
     string longestPalindrome(string s) {
@@ -1010,36 +1011,37 @@ public:
   - `P[i,i] = true` `P[i,i+1]=(Si==Sj)`
   - 时间复杂度 O(N^2) 空间复杂度 O(N^2)
   - 总体不如双指针中心扩展来的快
-```
+  - **注意遍历方向**
+```c++
 class Solution {
 public:
     string longestPalindrome(string s) {
-        int maxLen = 1;
-        int begin = 0;
+        string ans;
         int n = s.size();
-        vector<vector<int>> dp(n, vector<int>(n)); //初始化状态表
-        for (int j = 1; j < n; j++) {
-           // dp[j][j] = 1;
-            for (int i = 0; i < j; i++) {
-                if (s[j] == s[i]) {
-                    if (j - i < 3) {
-                        dp[i][j] = 1;
-                    } else{
-                        dp[i][j] = dp[i + 1][j - 1];
-                    }
+        vector<vector<int>> dp(n, vector<int>(n));
+        int maxLen = 0;
+        for (int i = 0; i < n; i++) {
+            
+            for (int j = i; j >= 0; j--) {
+                if (i == j) {
+                    dp[j][i] = 1;
+                }
+                else if (i - j + 1 == 2) {
+                    dp[j][i] = s[i] == s[j];
                 }
                 else {
-                    dp[i][j] = 0;
+                    dp[j][i] = (s[i] == s[j]) && (dp[j + 1][i - 1]);
                 }
-                if (dp[i][j] && j - i + 1 > maxLen) {
-                    maxLen = j - i + 1;
-                    begin = i;
+                if (dp[j][i]) {
+                    if (maxLen < i - j + 1) {
+                        ans = s.substr(j, i - j + 1);
+                        maxLen = i - j + 1;
+                    }
                 }
             }
         }
-        return s.substr(begin, maxLen);
+        return ans;
     }
-   
 };
 ```
 ###  125. 回文串验证
@@ -1109,6 +1111,65 @@ public:
     }
 };
 ```
+### 132. 分割回文串 II *
+> 给你一个字符串 s，请你将 s 分割成一些子串，使每个子串都是回文。返回符合要求的 最少分割次数。
+
+```
+输入：s = "aab"
+输出：1
+```
+
+- 动态规划题目，首先分析dp定义
+- 定义`cut[i]`表示坐标从0～i的子串的最少分割次数；
+  - `cut[i] = min(cut[j - 1] + 1) [j ~ i]是回文串` 
+  - 即考虑基本情况向前搜索子串与当前位置是否构成回文串
+  - 当[0~i]也为回文串时： `cut[i] = 0` 
+- 在上面定义中需要**提前计算好字符串的回文串分布情况**：即s[i][j]是否为回文串
+  - 通过类似的动态规划操作来完成
+  - `s[i][j] = n[i] == n[j] && s[i+1][j-1]` 
+- 因此总共用两次dp来完成计算
+- 关键点： **`回文状态判断`**  **`两遍dp`**
+
+```c++
+class Solution {
+public:
+    int minCut(string s) {
+        int n = s.size();
+        vector<vector<int>> dp(n, vector<int>(n));
+        // 确定回文串分布
+        for (int i = 0; i < n; i++) {
+            for (int j = i; j >= 0; j--) {
+                if (i == j) {
+                    dp[j][i] = 1;
+                }
+                else if ( i - j + 1 == 2) {
+                    dp[j][i] = s[i] == s[j];
+                }
+                else {
+                    dp[j][i] = (s[i] == s[j]) && (dp[j + 1][i - 1]);
+                }
+            }
+        }
+
+        vector<int> cut(n);
+        for (int i = 1; i < n; i++) {
+            if (dp[0][i]) {
+                cut[i] = 0;
+            }
+            else {
+                cut[i] = cut[i - 1] + 1;
+                for (int j = 1; j < i; j++) {
+                    if (dp[j][i]) {
+                        cut[i] = min(cut[i], cut[j - 1] + 1);
+                    }
+                }
+            }
+        }
+        return cut[n - 1];
+
+    }
+};
+```
 
 ### 516. 最长回文子序列
 
@@ -1129,7 +1190,7 @@ public:
     - 特殊情况： 对于长度为1的字符串的处理， 通过对`dp[i][i]`进行初始化即可
   - 遍历方向： **需要保证左下右方向的结果提前计算处理**，因此要在外层进行反方向遍历，在内循环正常从i + 1开始遍历，从下往上得到最终结果
 - 关键点： **`dp初始化`**  **`遍历方向`**
-```
+```c++
 class Solution {
 public:
     int longestPalindromeSubseq(string s) {
