--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -3,6 +3,7 @@
   - [剑指offer 03. 数组中重复的数字](#剑指offer-03-数组中重复的数字)
   - [41.缺失的第一个正数](#41缺失的第一个正数)
   - [42. 接雨水 [Hard] [*]](#42-接雨水-hard-)
+  - [60. 排列序列](#60-排列序列)
   - [剑指62. 圆圈最后剩下的数字](#剑指62-圆圈最后剩下的数字)
   - [73. 矩阵置零  [Medium]](#73-矩阵置零--medium)
   - [剑指offer 43. 1~n整数中1出现的次数](#剑指offer-43-1n整数中1出现的次数)
@@ -131,7 +132,7 @@ public:
 - 时间复杂度 O(N)
 - 关键点 **`单调栈`**
 
-```
+```c++
 class Solution {
 public:
     int trap(vector<int>& height) {
@@ -151,6 +152,66 @@ public:
                 ans += (l_max - height[left]);
                 left++;
             }
+        }
+        return ans;
+    }
+};
+```
+
+### 60. 排列序列
+> 给出集合 [1,2,3,...,n]，其所有元素共有 n! 种排列。按大小顺序列出所有排列情况，给定 n 和 k，返回第 k 个排列。
+
+```c++
+输入：n = 3, k = 3
+输出："213"
+```
+
+- 本质上可以通过回溯法进行求解，但在剪枝上需要有很多设计，否则时间复杂度比较高
+- 本题最关键的思路**在于缩小空间/问题规模**，具体通过对排序各位的数学分析来锁定最后的目标排列：
+  - 首先确定排列中的首个元素$a_1$, 以1为首的排列有 $(n -1)!$个..
+    - 因此**首数字**为： $a = \lfloor (k - 1) / (n-1)! \rfloor + 1$ 
+    - 注意这个公式，它避免了很多错误的情况， 如果表示为$a = \lfloor (k ) / (n-1)! \rfloor + 1$，**在k整除的情况下就会出现结果错误**
+  - 最终每个位置上的结果为： $ (k - 1) mode (n - 1)! + 1$
+  - 在遍历过程中，**使用数组记录各个数字是否被使用**， 避免数字重复使用，得到唯一的排序结果
+​
+```c++
+class Solution {
+public:
+
+    string getPermutation(int n, int k) {
+        string ans;
+        vector<int> factor(n + 1);
+        // 阶乘
+        factor[0] = 1;
+        for (int i = 1; i <= n; i++) {
+            factor[i] = factor[i - 1] * i;
+        }
+        /*
+            k 需要先自减一 原因：
+    不妨设分子为 k，那么得到的公式可能是这样的：
+        ai =  ⌊k / (n-1)!⌋ + 1
+    尝试使用以上公式计算 a1:
+        （1）当 k < (n-1)! 时，a1 = ⌊k / (n-1)!⌋ + 1 = 1，正确
+        （2）当 k = (n-1)! 时，a1 = ⌊k / (n-1)!⌋ + 1 = 2，错误
+    而使用 ai =  ⌊(k-1) / (n-1)!⌋ + 1 却能正确处理这种情况
+    即：只是简洁了数学公式的使用，如果不自减一的话，需要应对多种情况
+    */
+        k--; // 关键一步， 技巧性十足
+        vector<int> valid(n + 1, 1);
+        for (int i = 1; i <= n; i++) {
+            // 计算倍数
+            int order = k / factor[n - i] + 1; // 注意+1操作
+            for (int j = 1; j <= n; j++) {
+                order -= valid[j];
+                // 把用过的数字设置为0；
+                if (!order) {
+                    ans.push_back(j + '0');
+                    valid[j] = 0;
+                    break;
+                }
+            }
+            // 更新排列数量
+            k %= factor[n - i];
         }
         return ans;
     }
