--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -510,6 +510,45 @@ public:
 ```
 ### 137. 只出现过一次的数字 III
 - 给你一个整数数组 nums ，除某个元素仅出现一次外，**其余每个元素都恰出现三次**
+  
+- 分析： 
+> 考虑数字的二进制形式，**对于出现三次的数字，各 二进制位 出现的次数都是 3 的倍数**。
+因此，**统计所有数字的各二进制位中 1 的出现次数**，并对 3 求余，结果则为只出现一次的数字
+
+![avatar](137.png)
+- https://leetcode-cn.com/problems/single-number-ii/solution/single-number-ii-mo-ni-san-jin-zhi-fa-by-jin407891/
+
+- 使用有限自动机来进行分析，对于所有数字的某二进制位上1的个数，存在3种状态： 
+**即对 3 余数为 0, 1, 20,1,2**。
+  - 若输入二进制位 11 ，则状态按照以下顺序转换；
+  - 若输入二进制位 00 ，则状态不变
+![avatar](137-2.png)
+
+由于有三个状态，一位二进制无法表示，因此**使用两位二进制来表示3个状态**：`two one`
+![avatar](137-3.png)
+- one位置的更新方式为： 要考虑two位置状态以及输入的n
+```c++
+if two == 0:
+  if n == 0:
+    one = one
+  if n == 1:
+    one = ~one
+if two == 1:
+    one = 0
+```
+通过位运算可以简化为
+```c++
+one = one ^ n & ~two
+```
+- two位置的更新方式： 与计算one位置的方式一致，当one位置更新后，整体状态会存在移动，此时通过简单的变换操作既可以得到two位置的计算方法：
+```c++
+two = two ^ n & ~one
+```
+![avatar](137-4.png)
+- 遍历完所有数字后，**各二进制位都处于状态 00和状态 01** （取决于 “只出现一次的数字” 的各二进制位是 1 还是 0 ），而此两状态是由 one 来记录的（*此两状态下twos恒为 0*），**因此返回 one 即可**
+
+
+
 ```c++
 class Solution {
 public:
