--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -40,6 +40,7 @@
   - [补充. 01串问题](#补充-01串问题)
   - [165.比较版本号 [Medium]](#165比较版本号-medium)
   - [468. 验证IP地址](#468-验证ip地址)
+  - [1044. 最长重复子串*](#1044-最长重复子串)
 
 <!-- /code_chunk_output -->
 字符串问题花样繁多，面试题目难易差距显著，唯有多做多看掌握各种细节处理才能驾驭该类题目
@@ -1873,3 +1874,76 @@ public:
 
 
 
+
+### 1044. 最长重复子串*
+> 给出一个字符串 S，考虑其所有重复子串（S 的连续子串，出现两次或多次，可能会有重叠)。返回任何具有最长可能长度的重复子串。（如果 S 不含重复子串，那么答案为 ""。）
+
+```
+输入："banana"
+输出："ana"
+```
+- 比较困难的一个题目，可以暴力法遍历去做，不管怎么样都需要用到哈希表进行信息存储
+- 为了降低字符串搜匹配索的时间复杂度，使用字符串编码处理，将字符串编码成数字，通过数字进行匹配，**为了避免数字编码值相同但字符串不同的冲突情况，额外添加一个碰撞检测**
+- rabin-karp字符串编码 + 二分法
+- **借助二分搜索进行时间简化**， 从1～L的空间进行搜索
+
+```c++
+class Solution {
+public:
+    long modules = 1e9 + 7;
+    bool check(vector<int> nums, int beg1, int beg2, int L) {
+        for (int i = beg1, j =beg2; i < beg1 + L; i++, j++) {
+            if (nums[i] != nums[j]) {
+                return false;
+            }
+        }
+        return true;
+    }
+    // Rabin-Karp 字符串编码
+    int search(int L, int base, int n, vector<int> nums) {
+        long h = 0;
+        // 计算第一个位置上 指定长度的编码
+        for (int i = 0; i < L; i++) {
+            h = (h * base + nums[i]) %  modules;
+        }
+        long factor = 1;
+        unordered_map<long, int> seen;
+        seen[h] = 0;
+        for (int i = 1; i <= L; i++) factor = (factor * base) % modules;
+
+        for (int start = 1; start < n - L + 1; start++) {
+            // 滑动窗口移动
+            h = (h * base - nums[start - 1] * factor % modules + modules) % modules;
+            // 将下一位添加到数据中
+            h = (h + nums[start + L - 1]) % modules;
+            if (seen.count(h) && check(nums,seen[h], start, L)) {
+                return start;
+            }
+            seen[h] = start;
+        }
+        return -1;
+    }
+    string longestDupSubstring(string s) {
+        if (s.empty()) return s;
+        vector<int> nums;
+        for (auto p : s) {
+            nums.push_back(p - 'a');
+        }
+        string ans = "";
+        int left = 1;
+        int right = s.size() - 1;
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            int res = search(mid, 26, s.size(), nums);
+            if (res != -1) {
+                left = mid + 1;
+                ans = s.substr( res, mid);
+            }
+            else {
+                right = mid - 1;
+            }
+        }
+        return ans;
+    }
+};
+```
