--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -34,6 +34,7 @@
   - [剑指46. 把数字翻译成字符串](#剑指46-把数字翻译成字符串)
   - [64. 最小路径和](#64-最小路径和)
   - [120. 三角形最小路径和 [Red 小红书]](#120-三角形最小路径和-red-小红书)
+  - [312. 戳气球](#312-戳气球)
   - [343. 整数拆分](#343-整数拆分)
   - [1143. 最长公共子序列 *](#1143-最长公共子序列-)
 
@@ -1390,6 +1391,58 @@ public:
 };
 ```
 
+### 312. 戳气球
+> 有 n 个气球，编号为0 到 n - 1，每个气球上都标有一个数字，这些数字存在数组 nums 中。现在要求你戳破所有的气球。戳破第 i 个气球，你可以获得 nums[i - 1] * nums[i] * nums[i + 1] 枚硬币。 这里的 i - 1 和 i + 1 代表和 i 相邻的两个气球的序号。如果 i - 1或 i + 1 超出了数组的边界，那么就当它是一个数字为 1 的气球。
+**求所能获得硬币的最大数量**
+
+```
+输入：nums = [3,1,5,8]
+输出：167
+解释：
+nums = [3,1,5,8] --> [3,5,8] --> [3,8] --> [8] --> []
+coins =  3*1*5    +   3*5*8   +  1*3*8  + 1*8*1 = 167
+```
+
+- 动态规划问题： 
+- 将一个区间分为三段， 选出中心节点来戳破，两端的气球来计算，假设中间所夹的两段气球已被戳破
+- 根据这个简单的设定，定义`dp[i][j]` 表示**开区间(i, j)内的最大值**，由于超出边界的问题可以看作数字为1的气球，最后n个气球的问题转换为计算`dp[0][n+1]` **0和n+1位置都为1的气球**
+  - 转移公式： `dp[i][j] = max(c[i] * c[j] * c[k] + dp[i][k] + dp[k][j])` 两端的计算结果+中间的dp情况 
+  - **初始化**：构造[n+2][n+2]的存储矩阵，并设置临时数组[n+2]来存储气球的值
+  - **遍历方向**： 由于dp转移公式中，(i,j)设置到(i,k) (k,j)的dp值，因此需要从下而上递减的遍历，**外层递减，内层递增**
+- 时间复杂度O(N^3) 空间复杂度O(N^2)
+```c++
+class Solution {
+public:
+    int maxCoins(vector<int>& nums) {
+        int n = nums.size();
+        // 开区间
+        vector<vector<int>> dp(n + 2, vector<int> (n+2));
+        vector<int> tmp(n + 2);
+        // 构造辅助数组 首尾添加1
+        for (int i = 0; i < n; i++) {
+            tmp[i + 1] = nums[i]; 
+        }
+        tmp[0] = 1;
+        tmp[n + 1] = 1;
+        // 外层递减 设置为n-1 与内层间隔2
+        for (int i = n - 1; i >= 0; i--) {
+            for (int j = i + 2; j <= n + 1; j++) {
+                // 搜索中间戳的位置
+                for (int k = i + 1; k < j; k++) {
+                    // 关键点
+                    int total = tmp[i] * tmp[j] * tmp[k];
+                    total += dp[i][k];
+                    total += dp[k][j];
+                    dp[i][j] = max(dp[i][j], total);
+                }
+            }
+        }
+        return dp[0][n + 1];
+    }
+};
+```
+
+
 ### 343. 整数拆分
 > 给定一个正整数 n，将其拆分为至少两个正整数的和，并使这些整数的乘积最大化。 返回你可以获得的最大乘积。
 
@@ -1433,7 +1486,6 @@ public:
     }
 };
 ```
-
 ###  1143. 最长公共子序列 *
 - 教科书式经典dp问题
 > 给定两个字符串 text1 和 text2，返回这两个字符串的最长 公共子序列 的长度。如果不存在 公共子序列 ，返回 0 。
