--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -1805,7 +1805,7 @@ public:
   - 确认每个字符都在合法范围内
 
 
-```
+```c++
 class Solution {
 public:
     vector<string> split(string IP, char sep) {
@@ -1886,6 +1886,7 @@ public:
 - 为了降低字符串搜匹配索的时间复杂度，使用字符串编码处理，将字符串编码成数字，通过数字进行匹配，**为了避免数字编码值相同但字符串不同的冲突情况，额外添加一个碰撞检测**
 - rabin-karp字符串编码 + 二分法
 - **借助二分搜索进行时间简化**， 从1～L的空间进行搜索
+- 关键点： **`rabin-karp字符串编码`** **`二分查找变形`**
 
 ```c++
 class Solution {
