--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -36,6 +36,7 @@
 - [混合操作](#混合操作)
   - [86. 分隔链表](#86-分隔链表)
   - [143. 重排链表](#143-重排链表)
+  - [148. 排序链表](#148-排序链表)
   - [146. LRU cache结构设计 [Medium]](#146-lru-cache结构设计-medium)
   - [460. LFU cache结构设计 hard](#460-lfu-cache结构设计-hard)
   - [补充题： 排序奇升偶降链表 [字节 *]](#补充题-排序奇升偶降链表-字节-)
@@ -955,8 +956,7 @@ public:
 - 在最后要将未遍历至尾部的链表添加到pred中，避免数据错误
 - 关键点： **`dummpy node`**   **`单指针遍历`** 
 
-```
-
+```c++
 class Solution {
 public:
     ListNode* mergeTwoLists(ListNode* l1, ListNode* l2) {
@@ -1148,7 +1148,7 @@ public:
 - 时间复杂度 O(N) 空间复杂度 O(1)
 - 关键点： **`快慢指针找中点`**   **`反转链表`**  **`合并链表`**
 
-```
+```c++
 class Solution {
 public:
     void reorderList(ListNode* head) {
@@ -1190,6 +1190,126 @@ public:
 };
 ```
 
+### 148. 排序链表
+> 将链表排序成升序表
+
+- 借助归并排序的思路，通过递归的方式可以实现O(nlogn)的排序
+    - 自顶而下，需要进行链表二分，然后对有序部分进行合并
+    - 二分操作：寻找链表中点，**偶数情况为中点的左侧**
+    - 合并操作
+- 关键点： **`链表常用操作`**  **`归并思想`**
+```c++
+class Solution {
+public:
+    ListNode* sortList(ListNode* head) {
+        if (!head || !head -> next) return head;
+        ListNode* fast = head;
+        ListNode* slow = head;
+        // 取链表中点 如果为偶数的情况需要取中点左侧的划分点，因此跟之前的方法判断不一样
+        // fast &&fast -> next得到的slow为中间的第二个节点
+        while (fast->next  && fast -> next->next) {
+            fast = fast -> next -> next;
+            slow = slow -> next;
+        }
+        
+        fast = slow -> next;
+        slow -> next = nullptr;
+        //cout << slow -> val << " " << fast -> val  ;
+        return merge(sortList(head), sortList(fast));
+    }
+    ListNode* merge(ListNode* p1, ListNode* p2) {
+        ListNode* phead = new ListNode();
+        ListNode* p = phead;
+        while (p1 && p2) {
+            if (p1 -> val < p2 -> val) {
+                p -> next = p1;
+                p1 = p1 -> next;
+            }
+            else {
+                p -> next = p2;
+                p2 = p2 -> next;
+            }
+            p = p -> next;
+        }
+        p -> next = p1 ? p1 : p2;
+        return phead -> next;
+    }
+};
+```
+
+- 为了追求空间复杂度的最优，**进一步优化采用迭代的方式进行实现**，即自底而上的操作，
+  - 从长度为1的合并段开始，每次循环后成倍增大合并长度
+  - 需要先**计算链表长度**
+  - 然后设置两层循环遍历进行分段合并
+- 空间复杂度 O(1) 时间复杂度O(NlogN)
+
+```c++
+class Solution {
+public:
+    ListNode* sortList(ListNode* head) {
+        if (!head || !head -> next) return head;
+        ListNode* p = head;
+        
+        // 计算链表长度
+        int len = 0;
+        while (p) {
+            p = p -> next;
+            len++;
+        }
+        ListNode* phead = new ListNode(0 , head);
+        // 分段合并操作 每次调整合并长度
+        for (int sub = 1; sub < len; sub *= 2) {
+            ListNode* prev = phead;
+            ListNode* cur = phead -> next;
+            while (cur) {
+                // 从头部 按照指定间隔进行合并
+                ListNode* head1 = cur;
+                for (int i = 1; i < sub && cur != nullptr && cur -> next != nullptr; i++) {
+                    cur = cur -> next;
+                }
+                // 断开链接
+                ListNode* head2 = cur -> next;
+                cur -> next = nullptr;
+                cur = head2;
+                for (int i = 1; i < sub && cur != nullptr && cur -> next != nullptr; i++) {
+                    cur = cur -> next;
+                }
+                ListNode* next = nullptr;
+                if (cur) {
+                    // 断开后序链接
+                    next = cur -> next;
+                    cur -> next = nullptr;
+                }
+                ListNode* merged = merge(head1, head2);
+                prev -> next = merged;
+                // 更新prev
+                while (prev -> next) {
+                    prev = prev -> next;
+                }
+                cur = next;
+            }
+        }
+        return phead -> next;
+    }
+    ListNode* merge(ListNode* p1, ListNode* p2) {
+        ListNode* phead = new ListNode();
+        ListNode* p = phead;
+        while (p1 && p2) {
+            if (p1 -> val < p2 -> val) {
+                p -> next = p1;
+                p1 = p1 -> next;
+            }
+            else {
+                p -> next = p2;
+                p2 = p2 -> next;
+            }
+            p = p -> next;
+        }
+        p -> next = p1 ? p1 : p2;
+        return phead -> next;
+    }
+};
+```
 
 ### 146. LRU cache结构设计 [Medium]
 > 实现LRU缓存机制： 当缓存容量达到上限时，它应该在写入新数据之前**删除最久未使用的数据值**，从而为新的数据值留出空间
@@ -1287,6 +1407,7 @@ public:
     }
 };
 ```
+
 
 
 ### 460. LFU cache结构设计 hard
