--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -1410,6 +1410,7 @@ coins =  3*1*5    +   3*5*8   +  1*3*8  + 1*8*1 = 167
   - **初始化**：构造[n+2][n+2]的存储矩阵，并设置临时数组[n+2]来存储气球的值
   - **遍历方向**： 由于dp转移公式中，(i,j)设置到(i,k) (k,j)的dp值，因此需要从下而上递减的遍历，**外层递减，内层递增**
 - 时间复杂度O(N^3) 空间复杂度O(N^2)
+- 关键点： **`dp定义的范围`** **`遍历方向`**
 ```c++
 class Solution {
 public:
