--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -6,6 +6,7 @@
   - [70. 爬楼梯问题](#70-爬楼梯问题)
   - [53. 最大子序和 *](#53-最大子序和-)
   - [面试题 17.24. 最大子矩阵*](#面试题-1724-最大子矩阵)
+  - [152. 乘积最大子数组](#152-乘积最大子数组)
 - [买卖股票](#买卖股票)
   - [121. 买卖股票的最佳时机 *](#121-买卖股票的最佳时机-)
   - [122. 买卖股票的最佳时间 2 *](#122-买卖股票的最佳时间-2-)
@@ -324,6 +325,43 @@ public:
     }
 };
 ```
+### 152. 乘积最大子数组
+> 找出数组中乘积最大的连续子数组（该子数组中至少包含一个数字），并返回该子数组所对应的乘积
+
+```
+输入: [2,3,-2,4]
+输出: 6
+解释: 子数组 [2,3] 有最大乘积 6。
+```
+- 题目看起来与*[LC53.最大子序和]*很相近，但是由于乘法**涉及到符号问题**，
+  - `dp[i] = max(dp[i-1]*n[i], n[i])` 最大值不一定在前面的子段中取得
+  - `{5,6,−3,4,−3}` 对应的值为 `5 30 -3 4 -3` 而实际最大值为:`5 * 6 * -3 * 4 * -3`
+  - 因此要考虑正负号的影响
+- 记录正负两种情况的值，构建两个dp数组`dpMax[i]` `dpMin[i]`分别记录最大/最小的情况
+  - `dpMax[i] = max(dpMax[i - 1] * nums[i], max(nums[i], dpMin[i - 1]* nums[i]));`
+  - `dpMin[i] = min(dpMin[i - 1] * nums[i], min(nums[i], dpMax[i - 1]* nums[i]));`
+- 总体上要比LC53复杂一点，但基本思路仍然一致
+```c++
+class Solution {
+public:
+    int maxProduct(vector<int>& nums) {
+        if (nums.empty()) return 0;
+        int n = nums.size();
+        vector<int> dpMax(n);
+        vector<int> dpMin(n);
+        dpMax[0] = nums[0];
+        dpMin[0] = nums[0];
+        int ans = dpMax[0];
+        for (int i = 1; i < nums.size(); i++) {
+            dpMax[i] = max(dpMax[i - 1] * nums[i], max(nums[i], dpMin[i - 1]* nums[i]));
+            dpMin[i] = min(dpMin[i - 1] * nums[i], min(nums[i], dpMax[i - 1]* nums[i]));
+            ans = max(ans, dpMax[i]);
+        }
+        return ans;
+    }
+};
+```
+
 
 ## 买卖股票
 
