--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -18,6 +18,7 @@
   - [387. 字符串中的唯一字符](#387-字符串中的唯一字符)
   - [49. 字母异位词组合](#49-字母异位词组合)
   - [242. 有效的字母异位词](#242-有效的字母异位词)
+  - [443. 压缩字符串](#443-压缩字符串)
 - [字符串匹配问题](#字符串匹配问题)
   - [KMP算法理解与实现 *](#kmp算法理解与实现-)
   - [28. 实现strStr() 子串匹配查找 *](#28-实现strstr-子串匹配查找-)
@@ -668,6 +669,91 @@ public:
     }
 };
 ```
+
+
+### 443. 压缩字符串
+> 给定一组字符，使用原地算法将其压缩。压缩后的长度必须始终小于或等于原数组长度
+
+```
+["a","a","b","b","c","c","c"]
+
+输出：
+返回 6 ，输入数组的前 6 个字符应该是：["a","2","b","2","c","3"]
+```
+- **双指针**方法，`rear + start`搜索重复字符段，并将重复长度进行原地存储； 
+  - rear指针用于原地存储， start用于向后搜索
+  - 更新过程中主要时要注意rear指针的调整
+- 关键点： **`指针移动细节`**
+```c++
+class Solution {
+public:
+    int compress(vector<char>& chars) {
+        if (chars.empty()) return 0;
+        int mark = 1;
+        int n = chars.size();
+        int beg = 0;
+        while (start < n) {
+            int b = start;
+            int cnt = 0;
+            while (end < n && chars[start] == chars[b]) {
+                cnt++;
+                start++;
+            }
+            // cout << cnt << "-cnt ";
+            if (cnt > 1) {
+                chars[beg] = chars[b];
+                beg++;
+                string s = to_string(cnt);
+                for (int i = 0; i < s.size(); i++) {
+                    chars[beg + i] = s[i]; 
+                }
+                beg += s.size();
+            }
+            else {
+                chars[beg] =  chars[b];
+                beg++;
+            }
+        }
+        return beg;
+    }
+};
+```
+
+- 代码简化
+    - 三个指针： rear  start  end
+    - 注意rear指针的移动：
+      -  `chars[++rear] = chars[start];`  辅助压缩字符
+      -  `chars[++rear] = s[i];`   设置压缩长度
+```c++
+class Solution {
+public:
+
+    int compress(vector<char>& chars) {
+        if (chars.empty()) return 0;
+        int rear = -1;
+        int start = 0;
+        int end = 0;
+        int n = chars.size();
+        while (end < n) {
+            start = end;
+            while (start < n && chars[end] == chars[start]) {
+                end++;
+            }
+            int cnt = end - start;
+            // cout << cnt << "-cnt ";
+            chars[++rear] = chars[start];
+            if (cnt > 1) {
+                string s = to_string(cnt);
+                for (int i = 0; i < s.size(); i++) {
+                    chars[++rear] = s[i]; 
+                }
+            }
+        }
+        return rear + 1;
+    }
+};
+```
+
 ## 字符串匹配问题
 主要利用C++中的查找api **find()**  
 或者**手写复现KMP算法**来进行更高效的匹配
