--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -15,7 +15,7 @@
   - [160. 相交链表](#160-相交链表)
   - [876. 链表的中间节点](#876-链表的中间节点)
   - [234. 回文链表判断](#234-回文链表判断)
-  - [328. 奇偶数组  [Medium]](#328-奇偶数组--medium)
+  - [328. 奇偶链表  [Medium]](#328-奇偶链表--medium)
 - [链表删除节点](#链表删除节点)
   - [19. 删除链表的倒数第N个节点 [Medium]](#19-删除链表的倒数第n个节点-medium)
   - [83. 删除排序链表中的重复元素I](#83-删除排序链表中的重复元素i)
@@ -416,7 +416,7 @@ public:
 };
 ```
 
-### 328. 奇偶数组  [Medium]
+### 328. 奇偶链表  [Medium]
 > 把所有的奇数节点和偶数节点分别排在一起。请注意，这里的奇数节点和偶数节点指的是节点编号的奇偶性，而不是节点的值的奇偶性。
 
 ```
