--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -1128,7 +1128,8 @@ public:
 - 基于set哈希表进行计算是最简单的思路，
     - 对数组进行去重，然后对比
     - 时间复杂度： O(N） 空间复杂度 O(N)
-```class Solution {
+```c++
+class Solution {
 public:
     vector<int> getIntersection(set<int> s1, set<int> s2) {
         if (s1.size() > s2.size())
@@ -1183,7 +1184,6 @@ public:
         return intersection;
     }
 };
-
 ```
 
 ### 350. 两个数组的交集II
