--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -1021,7 +1021,8 @@ public:
    - 如果将数组构成一个链表形式的话，**可以用快慢指针法来找到链表的环的入口**
    - 通过链表查环的操作来变相实现重复数字的查找
    - 先分fast / slow 移动，等快慢指针移动到相同位置时，然后调整slow 从头开始遍历，当二者再次相遇时即为结果
-   - 时间复杂度 O(n) 空间复杂度 O(1)
+   - **时间复杂度 O(n) 空间复杂度 O(1)**
+   - 采用`do ... while`的结构，**避免初始化无法开始，非常巧妙的技巧**
    - 该题目下最优的解法
 ```c++
 class Solution {
