--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -35,6 +35,7 @@
   - [559. N叉树的最大深度](#559-n叉树的最大深度)
   - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树-)
   - [101. 对称二叉树](#101-对称二叉树)
+  - [662. 二叉树的最大宽度](#662-二叉树的最大宽度)
 - [树的构建](#树的构建)
   - [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
   - [106.从中序和后序中构建二叉树](#106从中序和后序中构建二叉树)
@@ -574,7 +575,7 @@ public:
 };
 ```
 
-```
+```c++
 class Solution {
 public:
     bool isSymmetric(TreeNode* root) {
@@ -604,6 +605,85 @@ public:
 };
 ```
 
+
+### 662. 二叉树的最大宽度
+> 给定一个二叉树，编写一个函数来**获取这个树的最大宽度**。树的宽度是所有层中的最大宽度。这个二叉树与满二叉树（full binary tree）结构相同，但一些节点为空。每一层的宽度被定义为两个端点（该层最左和最右的非空节点，两端点间的null节点也计入长度）之间的长度。
+
+- 借助二叉树的**层次遍历**来完成，每层的宽度为队列中**左右节点编号的差值**
+  - 在层次遍历即bfs时，给节点进行赋值操作
+  - root节点编码为1， left 2*root right : 2*root +1
+  - **为了避免数字过大，可以先减去偏置**
+- 也可以利用dfs来实现，采用自顶而下的递归逻辑，同样是进行节点编号操作
+  - **使用哈希表提前记录各层最左的第一个位置的编号**，后序遍历时进行同层相减即可
+
+- 关键点： **`节点编号`**  **`如何避免出现溢出`**
+```c++
+class Solution {
+public:
+    int widthOfBinaryTree(TreeNode* root) {
+        queue<TreeNode*> q;
+        if (!root) return 0;
+        root -> val = 0;
+        q.push(root);
+        int ans = 1;
+        while (!q.empty()) {
+            int s = q.size();
+            ans = max(ans, q.back() -> val - q.front() -> val + 1);
+            int offset = q.front()->val;
+            for (int i = 0; i < s; i++) {
+                TreeNode* cur = q.front();
+                q.pop();
+                cur -> val -= offset;
+                if (cur -> left) {
+                    cur -> left -> val = cur -> val * 2;
+                    
+                    q.push(cur -> left);
+                }
+                if (cur -> right) {
+                    cur -> right -> val = cur -> val * 2 + 1;
+                    q.push(cur -> right);
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+
+
+
+- dfs做法 
+  - 为了避免溢出问题：**使用ull**
+```c++
+ typedef unsigned long long ULL;
+class Solution {
+public:
+    unordered_map<int, long long> ls;
+    ULL ans = 1;
+    void helper(TreeNode* root, int level, ULL pos) {
+        if (!root) return;
+        if (ls.count(level)) {
+            ans = max(ans, pos - ls[level] + 1);
+        }
+        else {
+            if (ls.count(level - 1)) {
+                pos -= ls[level];
+            }
+            ls[level] = pos;
+        }
+        //cout << pos << " ";
+        level++;
+        helper(root -> left, level, 2 * pos );
+        helper(root -> right, level, 2 * pos + 1);
+    }
+    int widthOfBinaryTree(TreeNode* root) {
+        queue<TreeNode*> q;
+        if (!root) return 0;
+        helper(root,0,0);
+        return ans;
+    }
+};
+```
 
 
 ## 树的构建
@@ -990,7 +1070,7 @@ public:
 
 ### 230. 二叉搜索树BST中第K小的元素  [Medium]
 - 基本做法：遍历整颗树，然后从结果中取值
-```
+```c++
 class Solution {
 public:
     vector<int> res;
