--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -11,6 +11,7 @@
   - [43. 字符串相乘](#43-字符串相乘)
   - [415. 字符串相加](#415-字符串相加)
   - [补充. 字符串相减（大数减法）](#补充-字符串相减大数减法)
+  - [补充. 36进制加法 [字节]](#补充-36进制加法-字节)
   - [344.反转字符串](#344反转字符串)
   - [剑指 Offer 58 - II. 左旋转字符串](#剑指-offer-58---ii-左旋转字符串)
   - [151. 翻转字符串的单词](#151-翻转字符串的单词)
@@ -405,6 +406,47 @@ string sub(string a, string b) {
 }
 
 ```
+
+### 补充. 36进制加法 [字节]
+> 36进制由0-9，a-z，共36个字符表示。要求按照加法规则计算出任意两个36进制正整数的和，如1b + 2x = 48  （解释：47+105=152）要求：不允许使用先将36进制数字整体转为10进制，相加后再转回为36进制的做法
+
+
+- [LC415]**字符串加法的扩展**
+- 套用之前的写法框架即可，主要注意各位上36进制的处理方式
+  - `l1 >=0 || l2 >= 0 || pre > 0` 这样的**循环判断是这道题的灵魂**
+
+```c++
+class Solution {
+public:
+    char getChar(int n) {
+        if (n <= 9) return '0' + n;
+        return n - 10 + 'a';
+    }
+    int getInt(char ch) {
+        if ('0' <= ch && ch <= '9') return ch - '0';
+        return ch - 'a' + 10;
+    }
+    string addStrings(string num1, string num2) {
+        string res;
+        int pre = 0;
+        int l1 = num1.size() - 1;
+        int l2 = num2.size() - 1;
+        while (l1 >=0 || l2 >= 0 || pre > 0) {
+            int a = l1 >= 0 ? getInt(num2[l2]) : 0;
+            int b = l2 >= 0: getInt(num1[l1]) : 0;
+            int tmp = a + b + pre;
+            //注意
+            res.push_back(getChar(tmp % 36 + '0'));
+            pre = tmp/36; // 注意
+            l1--;
+            l2--;
+        }
+        reverse(res.begin(), res.end());
+        return res;
+    }
+};
+```
+
 
 
 
