--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -2,6 +2,7 @@
   - [31. 下一个排列 [Medium]](#31-下一个排列-medium)
   - [剑指offer 03. 数组中重复的数字](#剑指offer-03-数组中重复的数字)
   - [41.缺失的第一个正数](#41缺失的第一个正数)
+  - [442. 数组中重复的数据](#442-数组中重复的数据)
   - [42. 接雨水 [Hard] [*]](#42-接雨水-hard-)
   - [60. 排列序列](#60-排列序列)
   - [剑指62. 圆圈最后剩下的数字](#剑指62-圆圈最后剩下的数字)
@@ -120,6 +121,36 @@ public:
         }
         cout << n <<endl;
         return n + 1;
+    }
+};
+```
+### 442. [数组中重复的数据](https://leetcode-cn.com/problems/find-all-duplicates-in-an-array/)
+> 给定一个整数数组 a，其中1 ≤ a[i] ≤ n （n为数组长度）, 其中有些元素出现两次而其他元素出现一次。**找到所有出现两次的元素**。
+
+- 题目中要求时间复杂度 O(N) 空间复杂度 O(1), 限制了我们对题目的想象
+- 与[LC41缺失的第一个正数]相似，利用数组元素的值和索引值进行映射调整
+  - 这类题目往往都指明：元素范围`1 ≤ a[i] ≤ n`， 能够保证元素重新映射到相等索引上的正确性
+  - 本题中为了检验是否重复，利用映射后的元素`nums[nums[i] - 1]`进行辅助判断
+  - 当首次出现元素时`nums[nums[i] - 1]`取反， **当遇到元素负值时说明对应的nums[i]出现重复**
+  - **由于元素值取反后为负数，在进行索引映射时需要取绝对值**
+- 关键点： **`数组元素与索引映射`**
+```c++
+class Solution {
+public:
+    vector<int> findDuplicates(vector<int>& nums) {
+        vector<int> res;
+        for (int i = 0; i < nums.size(); i++) {
+            // **由于元素值取反后为负数，在进行索引映射时需要取绝对值**
+            int t = abs(nums[i]);
+            // 使用数据对应的索引位置上的正负号来标记当前是否重复
+            if (nums[t - 1] < 0) {
+                res.push_back(t);
+            }
+            else {
+                nums[t - 1] = -nums[t - 1];
+            }
+        }
+        return res;
     }
 };
 ```
