--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -43,6 +43,7 @@
   - [889. 先序加后序构建二叉树](#889-先序加后序构建二叉树)
   - [116. 填充每个节点的下一个右侧节点指针 I](#116-填充每个节点的下一个右侧节点指针-i)
   - [117. 填充每个节点的下一个右侧节点指针 II](#117-填充每个节点的下一个右侧节点指针-ii)
+  - [114. 二叉树展开为链表](#114-二叉树展开为链表)
   - [二叉树的最近公共祖先](#二叉树的最近公共祖先)
   - [二叉树的序列化与反序列化 [HARD]](#二叉树的序列化与反序列化-hard)
   - [654. 最大二叉树](#654-最大二叉树)
@@ -891,6 +892,69 @@ public:
     }
 };
 ```
+
+
+### 114. 二叉树展开为链表
+> 给你二叉树的根结点 root ，请你将它展开为一个单链表：
+展开后的单链表应该同样使用 TreeNode ，其中 right 子指针指向链表中下一个结点，而左子指针始终为 null 。展开后的单链表应该与二叉树先序顺序相同
+
+
+- 树结构改造问题
+- 最基本的思路可以是先进行先序遍历得到节点顺序，然后再进行遍历，调整前后指针情况， （移动right， lef置空）
+  - 时间复杂度 O(N) 空间复杂度O(N)
+
+```c++
+class Solution {
+public:
+    vector<TreeNode* > nodes;
+    void preorder(TreeNode* root) {
+        if (!root) return;
+        nodes.push_back(root);
+        preorder(root -> left);
+        preorder(root -> right);
+    }
+    void flatten(TreeNode* root) {
+        preorder(root);
+        for (int i = 1; i < nodes.size(); i++) {
+            nodes[i - 1] -> right = nodes[i];   
+            nodes[i - 1] -> left = nullptr;
+        }
+    }
+};
+```
+
+- 进一步思考发现：二叉树展开成前序链表的过程相当于：
+  - 1. 把一**A结点的左孩子L整个完整的树替换到此结点的右孩子R上**
+  - 2. 同时把此结点原来的右孩子R接到此节点左孩子L的最右结点的右孩子上
+  - 3. 然后将**当前结点替换为此结点的右孩子**(也就是原来的L)进行迭代(注意每次要将结点的左孩子设置为nullptr)。
+- 基于以上三步进行递归实现
+
+```c++
+class Solution {
+public:
+    void flatten(TreeNode* root) {
+        if (!root) return;
+        //
+        flatten(root -> left);
+        // 三步调整操作
+        // 左右节点调整
+        TreeNode* tmp = root -> right;
+        root -> right = root -> left;
+        root -> left = nullptr;
+        // 寻找原左子树最后的右节点
+        while (root -> right) {
+            root = root -> right;
+        }
+        // 将原右子树拼接在当前部分的后面
+        root -> right = tmp;
+        // 
+        flatten(tmp);
+    }
+};
+```
+
+
+
 ### 二叉树的最近公共祖先
 - 通过遍历实现，考虑二叉树节点的分布情况差异：
   - **后序遍历** 自底而上的判断逻辑
