--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -38,6 +38,7 @@
   - [312. 戳气球](#312-戳气球)
   - [343. 整数拆分](#343-整数拆分)
   - [1143. 最长公共子序列 *](#1143-最长公共子序列-)
+  - [887. 鸡蛋掉落 [面试**]](#887-鸡蛋掉落-面试)
 
 ## 基础问题
 ### 0-1背包问题
@@ -1554,3 +1555,54 @@ public:
     }
 };
 ```
+
+
+### 887. 鸡蛋掉落 [面试**]
+>  k 枚相同的鸡蛋，并可以使用一栋从第 1 层到第 n 层共有 n 层楼的建筑。已知存在楼层 f ，满足 0 <= f <= n ，任何从 高于 f 的楼层落下的鸡蛋都会碎，从 f 楼层或比它低的楼层落下的鸡蛋都不会破. 请你计算并返回要确定 **f 确切的值** 的 **最小操作次数** 是多少.
+
+- **逆向思维** 将问题进行转换：
+N 和 F 的关系
+  - N 的定义：使用一栋从 1 到 N 共有 N 层楼的建筑
+  - F 的定义：满足 0 <= F <= N 任何从高于 F 的楼层落下的鸡蛋都会碎，从 F 楼层或比它低的楼层落下的鸡蛋都不会破， 即状态
+  - 因此得知，F 比 N 多一个 0 层
+- 问题转换
+    将问题从： **N 个楼层，有 K 个蛋，求最少要扔 T 次，才能保证当 F 无论是 0 <= F <= N 中哪个值，都能测试出来**
+    **转变为：有 K 个蛋，扔 T 次，求可以确定 F 的个数，然后得出 N 个楼层**
+- 递归逻辑
+1. 如果只有 1 个蛋，或只有 1 次机会时，只可以确定出 T + 1 个 F
+2. 其他情况时： 【蛋碎了减 1 个，机会减 1 次】 + 【蛋没碎，机会减 1 次】 （遍历所有的状态）
+
+```c++
+class Solution {
+public:
+    int calcF(int K, int T)
+    {
+        if (T == 1 || K == 1) return T + 1;
+        // 两种不同的状态 对应不同的搜索F
+        return calcF(K - 1, T - 1) + calcF(K, T - 1);
+    }
+
+    int superEggDrop(int K, int N)
+    {
+        int T = 1;
+        while (calcF(K, T) < N + 1) T++;
+        return T;
+    }
+};
+```
+
+- 面试子问题：
+> 有 2 个蛋，用一座 100 层的楼，要使用**最少次数测试出蛋几层会碎**（F）。
+问**第一次应该从几层扔**。
+
+- 本质还是在求**最小测试次数**，  `superEggDrop(2, 100) = 14`
+- 最少需要14次，
+  - 所以第一次扔在14层， 若蛋碎， 从下面的1～13开始仍
+  - 若蛋没碎，从上面的27层开始扔，（剩下的区间只有12， 只能够15～26， 所以扔27） 
+
+所以在蛋的数量固定为 2 的情况下，T 和 F（N） 的关系应该是：
+扔 1 次，确定 2 个 F，也就是 (2 - 1 = 1) 个 N。
+扔 2 次，确定 2 + 2 个 F，也就是 (4 - 1 = 3) 个 N。
+扔 3 次，确定 2 + 2 + 3 个 F，也就是 (7 - 1 = 6) 个 N。
+即：1 + 2 + 3 + ... + 14 > 100
+所以答案是 14 次
