--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -1845,6 +1845,7 @@ public:
   - 记录截止到当前位置，出现的0和1的次数差，如果有两个不同位置的次数差相等则说明两个位置之间的为满足要求的子串
   - **使用哈希表/数组存储出现的次数差与对应的位置**
   - 使用两个遍历维护当前遍历位置为止出现的 0 / 1次数
+- 关键点：**前缀和的变形利用**
 
 - https://blog.csdn.net/weixin_41563161/article/details/105635697
 - https://blog.csdn.net/c_circle/article/details/78589130
@@ -1852,13 +1853,14 @@ public:
 
 
 
-```
+```c++
 int find(string& s) {
     int N = s.size();
     unordered_map<int, int> delta; // 记录01差值对应的位置索引
     int count0 = 0;
     int count1 = 0; // 记录当前出现的1次数
     int ans = 0;
+    delta[0] = -1; // 关键点
     for (int i = 0; i < N; i++) {
         if (s[i] == '0') {
             count0++;
