--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -16,6 +16,7 @@
   - [293. 滑动窗口最大值 [Hard] *](#293-滑动窗口最大值-hard-)
   - [718. 最长重复子数组](#718-最长重复子数组)
 - [前缀和解题技巧](#前缀和解题技巧)
+  - [525. 连续数组](#525-连续数组)
   - [560. 和为K的子数组](#560-和为k的子数组)
 
 
@@ -754,6 +755,50 @@ public:
 
 ## 前缀和解题技巧
 
+### 525. 连续数组
+> 给定一个二进制数组, 找到含有相同数量的 0 和 1 的最长连续子数组（的长度）
+
+```
+输入: [0,1]
+输出: 2
+说明: [0, 1] 是具有相同数量0和1的最长连续子数组。
+```
+- 与补充题 01子串基本一致
+- 标准的前缀和做法，需要进行一个小转换，将0转换为-1.这样前缀和就是能与**0、1数量一致等价起来**
+  - 找到相等的前缀和时进行结果更新即可，
+  - **初始化**： 添加0的情况
+  - 其他情况： 也可以统计当前0 1的出现差值，哈希表存储差值
+
+- 关键点： **前缀和的拓展应用**
+
+
+```c++
+class Solution {
+public:
+    int findMaxLength(vector<int>& nums) {
+        unordered_map<int, int> deltas;
+        int preSum = 0;
+        int res = 0;
+        deltas[0] = -1; //为前缀和注入灵魂 标志着初始情况
+        // 避免 [0,1] 这种情况无法计算
+        for (int i = 0; i < nums.size(); i++) {
+            preSum += nums[i] ? 1 : -1;
+            if (deltas.count(preSum)) {
+                res = max(res,  i - deltas[preSum]);
+            }
+            else {
+                deltas[preSum] = i;
+            }
+        }
+        return res;
+    }
+};
+```
+
+
+
+
+
 ### 560. 和为K的子数组
 
 > 给定一个整数数组和一个整数 k，你需要找到该数组中和为 k 的连续的子数组的个数。
@@ -767,7 +812,7 @@ public:
 - **连续子数组的和**提醒我们可以使用前缀和的方式来快速求解
 - 之前在[LC437.二叉树路径总和3]中就体验了前缀和的便捷。
 - 利用前缀和的关键： 寻找`sum-k`对应的前缀和出现的次数就得到了对应目标值的组合情况
-  - 初始化： 需要将前缀和字典先初始化 `(0, 1)`, 以应对sum -target = 0 的特殊情况
+  - **初始化**： 需要将前缀和字典先初始化 `(0, 1)`, **以应对sum -target = 0 的特殊情况**
 - 时间复杂度 O(N)  空间复杂度 O(N)
 - 关键点： **`前缀和 + 哈希表`**
 
@@ -792,3 +837,5 @@ public:
 ```
 
 - 更多相同类型题目分析：https://leetcode-cn.com/problems/subarray-sum-equals-k/solution/de-liao-yi-wen-jiang-qian-zhui-he-an-pai-yhyf/
+
+
