--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -4,6 +4,8 @@
   - [0-1背包问题](#0-1背包问题)
   - [剑指10-1.斐波那契数列](#剑指10-1斐波那契数列)
   - [70. 爬楼梯问题](#70-爬楼梯问题)
+  - [补充问题： 圆环回原点问题](#补充问题-圆环回原点问题)
+- [子序和问题](#子序和问题)
   - [53. 最大子序和 *](#53-最大子序和-)
   - [面试题 17.24. 最大子矩阵*](#面试题-1724-最大子矩阵)
   - [152. 乘积最大子数组](#152-乘积最大子数组)
@@ -144,13 +146,16 @@ public:
 };
 ```
 ### 70. 爬楼梯问题
+> 假设你正在爬楼梯。需要 n 阶你才能到达楼顶。每次你可以爬 1 或 2 个台阶。你有多少种不同的方法可以爬到楼顶呢
+
+
 - 递归公式：f(n)=f(n-1)+f(n-2) 递归解法会超时
   - 初始状态： `f(0) = 1` `f(1) = 1` 
 - 使用简单的动态规划解决
 - 或者利用上面的递归公式的通项公式来直接求解
 
 
-```
+```c++
 class Solution {
 public:
     int climbStairs(int n) {
@@ -166,7 +171,7 @@ public:
 };
 ```
 **这种写法时间复杂度为O(n) 空间复杂度为O(n)，可以做进一步优化**： 空间复杂度优化到O(1)
-```
+```c++
 class Solution {
 public:
     int numWays(int n) {
@@ -182,6 +187,34 @@ public:
 };
 ```
 
+### 补充问题： 圆环回原点问题
+
+> 圆环上有10个点，编号为0~9。从0点出发，每次可以逆时针和顺时针走一步，问走n步回到0点共有多少种走法。
+
+- **与LC70.爬楼梯有相似之处**
+- 这里是走n步， LC70是n阶；
+- 动态规划公式的目标是要描述左/右走法的作用
+  - dp[i][j] : **定义为i步走到j点的走法数量**
+  - `dp[i][j] = dp[i-1][(j-1+length)%length]  + dp[i-1][(j+1)%length]`
+  - **走n步到0的方案数=走n-1步到1的方案数+走n-1步到9的方案数**
+  - 由于是环形，所以要使用模操作
+
+```c++
+int backToOrigin(int n, int length) {
+    vector<vector<int>> dp(n, vector<int>(length));
+    dp[0][0] = 1;
+    for (int i = 0; i < n; i++) {
+        for (int j = 0; j < length; j++) {
+            dp[i][j] = dp[i-1][(j-1+length)%length] + dp[i-1][(j+1)%length];
+        }
+    }
+    return dp[n-1][0];
+}
+```
+
+
+
+## 子序和问题
 ### 53. 最大子序和 *
 > 给定一个整数数组 nums ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
 > 
