--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -1,5 +1,7 @@
 - [进阶](#进阶)
   - [31. 下一个排列 [Medium]](#31-下一个排列-medium)
+  - [556. 下一个更大元素 III](#556-下一个更大元素-iii)
+  - [670. 最大交换](#670-最大交换)
   - [剑指offer 03. 数组中重复的数字](#剑指offer-03-数组中重复的数字)
   - [41.缺失的第一个正数](#41缺失的第一个正数)
   - [442. 数组中重复的数据](#442-数组中重复的数据)
@@ -63,6 +65,91 @@ public:
     }
 };
 ```
+
+### 556. 下一个更大元素 III 
+> 正整数 n ，请你找出符合条件的最小整数，其由重新排列 n 中存在的每位数字组成，并且其值大于 n 。如果不存在这样的正整数，则返回 -1 。
+> 返回的整数应当是一个 32 位整数 ，如果存在满足题意的答案，但不是 32 位整数 ，同样返回 -1
+
+- 与[LC31.下一个排列]做法一致，区别在于此处输入为32位正数，翻转计算后**可能存在溢出**
+  - s1. 正整数转 string
+  - s2. 寻找低位 [left < left + 1]； 若不存在低位，说明木的结果
+  - s3. 存在低位： 则进行从个位开始搜索大于低位数字的首个值， 然后进行交换
+  - s4. 为了保证是下一个紧邻的元素，**将低位后面的数字进行反序** （在前面的搜索过程中已经确保了这些部分是降序的，反序后的得到的值才是正确值）
+- 特殊情况处理：
+  - 最后需要添加对**溢出情况的处理**
+- 时间复杂度 O(N) 空间复杂度 O(N)
+
+```c++
+class Solution {
+public:
+    int nextGreaterElement(int n) {
+        string s = to_string(n);
+        if (s.size() <= 1) return -1;
+        int p2 = s.size() - 2;
+        // 寻找左  < left
+        while (p2 >= 0 && s[p2 + 1] <= s[p2]) {
+            p2--;
+        }
+        if (p2 < 0) {
+            return -1;
+        }
+        int t = s.size() - 1;
+        // 翻转后序的部分：
+        while (t >= 0 && s[t] <= s[p2]) {
+            t--;
+        }
+        swap(s[p2], s[t]);
+        reverse(s.begin() + p2 + 1, s.end());
+        long val = stol(s);
+        if (val > INT_MAX || val <= n) return -1;
+        return val;
+    }
+};
+```
+
+### 670. 最大交换
+> 给定一个非负整数，你至多可以交换一次数字中的任意两位。返回你能得到的最大值。
+
+```
+输入: 2736
+输出: 7236
+解释: 交换数字2和数字7。
+```
+- 与[LC37.下一个排列]有相似之处，但细节上差异还挺大
+- 本题也是要找到**高位上的最小值和低位上的最大值**，进行交换，但是需要注意的是计算过程是相对的
+  - 在实现上通过辅助数组巧妙地完成这一寻找：
+  - s1. 从低位到高位进行遍历， 确定**每个位置上从低到高的最大取值** （用辅助数组进行记录）
+  - s2. 从高向低遍历，判断当前位置是否可以进行交换得到最大取值(通过上一步的辅助数组进行判断)； 若出现这种情况，直接进行交换即可得到结果
+
+> 核心思想：**把尽可能低位的最大数字与尽可能高位的小数字交换**
+1. 先从低位往高位遍历，保存每一位经过交换能得到的最大值的下标
+2. 再从高位往低位遍历，直到某一位小于该位可以取到的最大值，上一步保存了该位置最大值的下标，交换即可
+
+
+```c++
+class Solution {
+public:
+    int maximumSwap(int num) {
+        string s = to_string(num);
+        vector<int> tmp(s.size()); //记录各个位置上的最大值
+        int _m = s.size() - 1;
+        for (int i = s.size() - 1; i >= 0; i--) {
+            // 从低位到高位记录每个位置上的可能的最大取值
+            if (s[i] > s[_m]) _m = i;
+            tmp[i] = _m; 
+        }
+        // 然后从高位到低位进行遍历 对首个位置最大取值在低位的元素进行交换
+        for (int i = 0; i < s.size(); i++) {
+            if (s[tmp[i]] != s[i]) {
+                swap(s[i], s[tmp[i]]);
+                break;
+            }
+        }
+        return stoi(s);
+    }
+};
+```
+
 ### 剑指offer 03. 数组中重复的数字
 
 > 在一个长度为 n 的数组 nums 里的**所有数字都在 0～n-1 的范围内**。数组中某些数字是重复的，但不知道有几个数字重复了，也不知道每个数字重复了几次。**请找出数组中任意一个重复的数字**
