--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -34,6 +34,7 @@
   - [111. 二叉树的最小深度 *](#111-二叉树的最小深度-)
   - [559. N叉树的最大深度](#559-n叉树的最大深度)
   - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树-)
+  - [100. 相同二叉树](#100-相同二叉树)
   - [101. 对称二叉树](#101-对称二叉树)
   - [662. 二叉树的最大宽度](#662-二叉树的最大宽度)
 - [树的构建](#树的构建)
@@ -552,6 +553,20 @@ public:
         return true;
         }
       
+};
+```
+### 100. 相同二叉树
+>  两棵二叉树的根节点 p 和 q ，编写一个函数来检验这两棵树是否相同。如果两个树在结构上相同，并且节点具有相同的值，则认为它们是相同的
+
+
+```c++
+class Solution {
+public:
+    bool isSameTree(TreeNode* p, TreeNode* q) {
+        if (!p && !q) return true;
+        if (!p || !q) return false;
+        return (p -> val == q -> val) && (isSameTree(p->left, q-> left)) && (isSameTree(p->right, q->right));
+    }
 };
 ```
 
