--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -10,6 +10,7 @@
   - [剑指62. 圆圈最后剩下的数字](#剑指62-圆圈最后剩下的数字)
   - [73. 矩阵置零  [Medium]](#73-矩阵置零--medium)
   - [剑指offer 43. 1~n整数中1出现的次数](#剑指offer-43-1n整数中1出现的次数)
+  - [134. 加油站](#134-加油站)
 - [滑动窗口解题技巧](#滑动窗口解题技巧)
   - [剑指57-II. 和为s的连续正数序列](#剑指57-ii-和为s的连续正数序列)
   - [76. 最小覆盖子串 [Hard] * [字节/百度]](#76-最小覆盖子串-hard--字节百度)
@@ -484,6 +485,48 @@ public:
             digit *= 10;
         }
         return res;
+    }
+};
+```
+### 134. 加油站
+> 一条环路上有 N 个加油站，其中第 i 个加油站有汽油 gas[i] 升。
+你有一辆油箱容量无限的的汽车，从第 i 个加油站开往第 i+1 个加油站需要消耗汽油 cost[i] 升。你从其中的一个加油站出发，开始时油箱为空。
+如果你可以绕环路行驶一周，则返回出发时加油站的编号，否则返回 -1
+
+```
+输入: 
+gas  = [1,2,3,4,5]
+cost = [3,4,5,1,2]
+输出: 3
+```
+- 通过下图的折线来表示， **黑色折线图即总油量剩余值**，若要满足题目的要求：跑完全程再回到起点，**总油量剩余值的任意部分都需要在X轴以上**，且跑到终点时：总剩余汽油量 >= 0。
+
+- 为了让黑色折线图任意部分都在 X 轴以上，我们**需要向上移动黑色折线图，直到所有点都在X轴或X轴以上。此时，处在X轴的点即为出发点**
+  - 本质在**寻找折线的最低点**
+1. 首先判断总gas能不能大于等于总cost，如果总gas不够，一切都白搭对吧（总（gas- cost）不用单独去计算，和找最低点时一起计算即可，只遍历一次）；
+
+2. 再就是找总（gas-cost）的最低点，不管正负（当然如果最低点都是正的话那肯定能跑完了）；
+
+3. 找到最低点后，如果有解，那么**解就是最低点的下一个点**，因为总（gas-cost）是大于等于0的，所以**前面损失的gas要从最低点下一个点开始都会拿回来**
+
+
+![avatar](./134.png)
+
+```c++
+class Solution {
+public:
+    int canCompleteCircuit(vector<int>& gas, vector<int>& cost) {
+        int spare = 0;
+        int minSpare = INT_MAX;
+        int idx = 0;
+        for (int i = 0; i < gas.size(); i++) {
+            spare += (gas[i] - cost[i]);
+            if (spare < minSpare) {
+                minSpare = spare;
+                idx = i;
+            }
+        }
+        return spare < 0 ? -1 : (idx + 1) % gas.size();
     }
 };
 ```
