--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -17,6 +17,7 @@
   - [191. 位1的个数](#191-位1的个数)
   - [231. 2的幂](#231-2的幂)
   - [268. 缺失的数字](#268-缺失的数字)
+  - [405. 数字转十六进制](#405-数字转十六进制)
 - [双指针技巧](#双指针技巧)
   - [11. 盛最多水的容器](#11-盛最多水的容器)
   - [15. 三数之和 3Sum [Medium]](#15-三数之和-3sum-medium)
@@ -742,6 +743,32 @@ public:
     }
 };
 ```
+### 405. 数字转十六进制
+> 给定一个整数，编写一个算法将这个数转换为十六进制数。对于负整数，我们通常使用 补码运算 方法。
+
+- 使用位元素方法，**每4位进行一次&操作**，得到当前的16进制表示；然后**再循环右移即可**，每次移动4位
+- 需要提前转换位unsigned int数字，避免对负数的处理。
+
+- 关键点： **`unsigned int`** **`移位 + & 操作`**
+```c++
+class Solution {
+public:
+    
+    string toHex(int num) {
+        string s = "0123456789abcdef";
+        if (num == 0) return "0";
+        string res;
+        unsigned int n = num;
+        while (n) {
+            res.push_back(s[n & 15]);
+            n = n >> 4;
+        }
+        reverse(res.begin(), res.end());
+        return res;
+    }
+};
+```
+
 
 ## 双指针技巧
 
