--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -29,6 +29,7 @@
   - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
   - [125. 回文串验证](#125-回文串验证)
   - [132. 分割回文串 II *](#132-分割回文串-ii-)
+  - [139. 单词拆分](#139-单词拆分)
   - [516. 最长回文子序列](#516-最长回文子序列)
 - [字符串转换问题](#字符串转换问题)
   - [8.字符串转换整数 (atoi) Mid *](#8字符串转换整数-atoi-mid-)
@@ -1299,7 +1300,77 @@ public:
     }
 };
 ```
+### 139. 单词拆分
+> 给定一个非空字符串 s 和一个包含非空单词的列表 wordDict，判定 s 是否可以被空格拆分为一个或多个在字典中出现的单词。
+说明：拆分时可以重复使用字典中的单词。你可以假设字典中没有重复的单词
 
+```
+输入: s = "leetcode", wordDict = ["leet", "code"]
+输出: true
+```
+- 字符串分割问题，暴力的思路就是枚举各种情况，那么再优化一点就是用回溯法来解题
+  - 使用记忆化的思路来进行剪枝，**记录下以当位置开始子串是否能够被拆分**
+  - 剩下的就是回溯法的模板
+- 关键点： **`记忆化 + 回溯`**
+- 时间复杂度 O(2^N) 空间复杂度 O(N)
+
+```c++
+class Solution {
+public:
+    bool backTrack(string s, unordered_set<string>& wordDict, int startIndex, vector<int>& memo) {
+        if (startIndex == s.size()) return true;
+
+        if (memo[startIndex] != -1) return memo[startIndex];
+        for (int i = startIndex; i < s.size(); i++) {
+            string word = s.substr(startIndex, i - startIndex + 1);
+            if (wordDict.count(word) && backTrack(s, wordDict, i + 1, memo)) {
+                memo[i] = 1;
+                return true;
+            }
+        }
+        memo[startIndex] = 0; // 以startIndex开始的子串不可分割
+        return false;
+
+    }
+    bool wordBreak(string s, vector<string>& wordDict) {
+        if (s.empty()) return true;
+        vector<int> memo (s.size(), -1);
+        unordered_set<string> wordSet(wordDict.begin(), wordDict.end());
+        return backTrack(s, wordSet, 0, memo);
+
+    }
+};
+```
+- 本题还有**动态规划**做法： 
+  - 定义dp[i] 表示从[0,i]子串是否可以正确拆分
+  - `dp[i] = (dp[i - j] & dp[j]);` 类似于0/1背包问题
+  - 初始化： `dp<n+1,0>`
+  - 遍历方向： 外层遍历不同位置[1,s.size()]； 内层遍历子段
+- 时间复杂度 O(N^3) 内外循环+子段查找
+```c++
+class Solution {
+public:
+    
+    bool wordBreak(string s, vector<string>& wordDict) {
+        if (s.empty()) return true;
+        vector<int> dp(s.size() + 1, 0);
+        unordered_set<string> wordSet(wordDict.begin(), wordDict.end());
+        dp[0] = 1;
+        // 从1开始编码， (j,i)取出的word刚好为目标子段
+        for (int i = 1; i <= s.size(); i++) {
+            for (int j = 0; j < i; j++) {
+                string word = s.substr(j, i - j);
+                // 判断当前词是否出现 且之前的值也出现过
+                if (wordSet.count(word) && dp[j]) {
+                    dp[i] = 1;
+                }
+            }
+        }
+        return dp[s.size()];
+
+    }
+};
+```
 ### 516. 最长回文子序列
 
 > 给定一个字符串 s ，找到其中最长的回文子序列，并返回该序列的长度。可以假设 s 的最大长度为 1000 。
